fix: send button not visible

--- a/src/components/Input.css
+++ b/src/components/Input.css
@@ -3,11 +3,11 @@
   bottom: 5px;
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 83%;
 }
 
 .input-box input {
-  flex-grow: 2;
+  flex-grow: 15;
   padding: 8px;
 }
 
